--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Raleway", sans-serif;
+  font-family: "pristina", sans-serif;
 }
 
 /*--------------------------------------------------------------
@@ -316,7 +316,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/an-bg.jpg") top right;
+  background: url("../img/325256679_1131543570845693_5208113875336489048_n.jpg") top right;
   background-size: cover;
   position: relative;
 }
@@ -1148,7 +1148,7 @@ section {
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  background: url("../img/footer-bg.jpg") top center no-repeat;
+  background: url("../img/anma-bg.png") top center no-repeat;
   background-size: cover;
   color: #fff;
   font-size: 14px;
